Add AdminGamificationController for badges/products/growth rules CRUD
- AdminGamificationController at /api/admin/gamification/*
- AdminGamificationService with full CRUD for badges, products, growth rules
- SecurityConfig: add /api/admin/** permitAll (admin role check via JwtAuthFilter)
- JwtAuthFilter: load user role from DB and set ROLE_AUTHORITY
- User entity: add role field